[package]
name = "pipebuf_rustls"
version = "0.21.0"
edition = "2021"
authors = ["Jim Peters <jim@uazu.net>"]

description = "PipeBuf wrapper for Rustls"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/pipebuf_rustls"
documentation = "https://docs.rs/pipebuf_rustls"

keywords = ["rustls","crypto","async","pipebuf"]
categories = [ "asynchronous", "cryptography", "network-programming" ]

[dependencies]
pipebuf = "0.2"
rustls = "0.21.1"
