[package]
name = "pipebuf_rustls"
version = "0.23.0"
edition = "2021"
authors = ["Jim Peters <jim@uazu.net>"]

description = "PipeBuf wrapper for Rustls"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/pipebuf_rustls"
documentation = "https://docs.rs/pipebuf_rustls"

keywords = [ "rustls", "crypto", "async", "pipebuf" ]
categories = [ "asynchronous", "cryptography", "network-programming" ]

[features]
default = ["buffered"]
buffered = ["rustls/std"]
unbuffered = []

[dependencies]
pipebuf = "0.3.1"
rustls = { version = "0.23.4", default-features = false }

[dev-dependencies]
# For the tests, we need `std` and `ring`
rustls = { version = "0.23.4", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.1.2"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "stream"
harness = false
